minikube_istio_helloworld/gateway_1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruit-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruit-service
spec:
  hosts:
  - "*"
  gateways:
  - fruit-gateway
  http:
  - match:
    - uri:
        exact: /apple
    route:
    - destination:
        host: apple-service
        port:
          number: 5678
  - match:
    - uri:
        exact: /banana
    route:
    - destination:
        host: banana-service
        port:
          number: 5678
