minikube_istio_helloworld/gateway_2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruit-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apple-service
spec:
  hosts:
  - apple.fruits.com
  gateways:
  - fruit-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: apple-service
        port:
          number: 5678
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banana-service
spec:
  hosts:
  - banana.fruits.com
  gateways:
  - fruit-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: banana-service
        port:
          number: 5678
